--- a/jangbogo_backend/package.json
+++ b/jangbogo_backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --watch src/**/* -e ts,tsx --exec ts-node src/app.ts",
+    "dev": "cross-env NODE_ENV=development NODE_PATH=src nodemon --watch src/**/* -e ts,tsx --exec ts-node src/app.ts",
     "build": "tsc"
   },
   "dependencies": {
@@ -13,7 +13,9 @@
     "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.0",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "mongoose": "^5.6.4",
+    "q": "^1.5.1"
   },
   "devDependencies": {
     "@types/koa": "^2.0.49",
@@ -21,7 +23,9 @@
     "@types/koa-json": "^2.0.18",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.0.42",
+    "@types/mongoose": "^5.5.7",
     "@types/node": "^12.6.1",
+    "@types/q": "^1.5.2",
     "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
