--- a/jangbogo_backend/package.json
+++ b/jangbogo_backend/package.json
@@ -5,9 +5,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development NODE_PATH=src nodemon --watch src/**/* -e ts,tsx --exec ts-node src/app.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cross-env": "^5.2.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
@@ -18,6 +23,8 @@
     "q": "^1.5.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jest": "^24.0.15",
     "@types/koa": "^2.0.49",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-json": "^2.0.18",
@@ -26,7 +33,10 @@
     "@types/mongoose": "^5.5.7",
     "@types/node": "^12.6.1",
     "@types/q": "^1.5.2",
+    "@types/supertest": "^2.0.8",
+    "jest": "^24.8.0",
     "nodemon": "^1.19.1",
+    "supertest": "^4.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   }
