mongoose deprecated 요소 제거 및 모듈 제작

--- a/jangbogo_backend/tsconfig.json
+++ b/jangbogo_backend/tsconfig.json
@@ -12,7 +12,10 @@
       ], 
       "settings/*" : [
         "settings/*"
-      ] 
+      ], 
+      "modules/*": [
+        "modules/*" 
+      ]
     }, 
     "lib": ["es5"], 
     "target": "es5", 
