일반 로그인 처리 및 토큰 갱신 처리 완료

--- a/package.json
+++ b/package.json
@@ -16,11 +16,5 @@
   "bugs": {
     "url": "https://github.com/dargonne/JangBoGo/issues"
   },
-  "homepage": "https://github.com/dargonne/JangBoGo#readme",
-  "dependencies": {
-    "mailgun-js": "^0.22.0"
-  },
-  "devDependencies": {
-    "@types/mailgun-js": "^0.22.2"
-  }
+  "homepage": "https://github.com/dargonne/JangBoGo#readme"
 }
