--- a/jangbogo_backend/package.json
+++ b/jangbogo_backend/package.json
@@ -12,27 +12,34 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cross-env": "^5.2.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.6.4",
+    "mailgun-js": "^0.22.0",
+    "mongoose": "^5.6.5",
     "q": "^1.5.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^24.0.15",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/koa": "^2.0.49",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-json": "^2.0.18",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.0.42",
-    "@types/mongoose": "^5.5.7",
+    "@types/mailgun-js": "^0.22.2",
+    "@types/mongoose": "^5.5.8",
     "@types/node": "^12.6.1",
     "@types/q": "^1.5.2",
+    "@types/request": "^2.48.2",
     "@types/supertest": "^2.0.8",
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
