--- a/jangbogo_frontend/package.json
+++ b/jangbogo_frontend/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.4",
     "enzyme": "^3.10.0",
+    "query-string": "^6.8.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
@@ -26,6 +27,7 @@
     "webpack-cli": "^3.3.4"
   },
   "devDependencies": {
+    "@types/query-string": "^6.3.0",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
@@ -35,6 +37,6 @@
     "ts-loader": "^6.0.2",
     "webpack-dev-server": "^3.7.1",
     "webpack-merge": "^4.2.1"
-  }, 
+  },
   "proxy": "http://localhost:3000"
 }
